@@ -1,4 +1,7 @@
 
+Sun Jul 01 16:48:53 GMT 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
+	* ktcp now informs kernel socket about available data for use
+	  in select.
 
 Mon Jun 25 02:53:21 GMT 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
 	* Added at ELKS CVS
